--- a/Drug-use-prediction.Rmd
+++ b/Drug-use-prediction.Rmd
@@ -235,6 +235,14 @@ Our boosting model True Positive Rate is `r boost_tpr`. This value is very high 
 
 Our random forest model True Positive Rate is `r rf_tpr`. This value is also very high indicating that the random forest model is performing well, correctly predicting "Yes" for recent nicotine usage `96.32`% of the time.
 
-Additionally the boosting and random forest model TPRs are much higher than the TPR of the pruned single decision tree.  
+Additionally the boosting and random forest model TPRs are much higher than the TPR of the pruned single decision tree.
+
+Although TPR is an important metric for evaluating model performance, further investigating FPR would be beneficial for better understanding the performance of our models. Fitting an ROC curve and calculating the area under the curve in addition to TPR and FPR would allow us to further interpret the models accuracy when classifying nicotine use. Furthermore, in this project we set our tuning parameter for our boosting model and random forest model to `0.2` which is a lower classification threshold, increasing the models True Positive Rate, but also False Positive Rate. This increased TPR could potentially lead to a false confidence in our models performance, further emphasizing the need to investigate FPR and/or evaluate model performance with larger classification thresholds. 
+
+Finally, an important note on the modeling of nicotine use in this project is the failure to use other drug use data. We build our model on soley demographic, personality trait, and nicotine use data of participants. We could potentially build a better model if we build more predictors based off other drug use data. For example if an individual has experimented with many drugs previously, they may be more likely to use nicotine. 
+
+
+
+
 
 
